# nusearch

./: README.md  pyproject.toml
src/chat/: agent.py  consumers.py  parser.py  routing.py
src/chat/callbacks/: socket.py
src/chat/templates/chat/: index.html
src/nusearch/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/nusearch/chat/: agent.py  apps.py  consumers.py  parser.py  routing.py
src/nusearch/chat/templates/chat/: index.html
